# mcp-client-shell

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yaml  python-publish.yml
