[project]
name = "mcp-client-shell"
version = "0.1.0"
description = "A local MCP client for testing FastMCP servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastmcp>=2.13.1"]

authors = [{ name = "Matheus Cafalchio", email = "mcafalchio@gmail.com" }]
license = { text = "MIT" }
